DevTools: fix version number overflow in Application>IndexedDB

Originally the version number displayed in Application>IndexedDB is
restricted to signed 32bit, so it will be negative if for example (a)
type 'window.indexedDB.open("debugDB", 2147483648);' in console, or (b)
a databse instance is updated for 2147483647 times. This patch fixes the
problem.

Bug: 916286
Change-Id: Ib56def7f8c1de246cac917cdd1c40d60b914eb4d
Reviewed-on: https://chromium-review.googlesource.com/c/1403675
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Haihong Li (Harley) <hhli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621622}
Former-commit-id: 8e2a0962114bed0a9fe047ec5c62dabc3ea52157